--- a/recyclerview-example/src/main/res/layout/item_horizontal.xml
+++ b/recyclerview-example/src/main/res/layout/item_horizontal.xml
@@ -11,7 +11,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="150dp"
 	android:layout_height="150dp"
-	android:background="@drawable/ic_launcher_background"
+	android:background="@drawable/miku"
 	android:elevation="2dp"
 	android:gravity="center"
 	android:text="1"
