--- a/recyclerview/src/main/res/layout/item_load_more.xml
+++ b/recyclerview/src/main/res/layout/item_load_more.xml
@@ -8,13 +8,8 @@
   ~ Sunday, March 04, 2018 at 21:12                                                               ~
   ~                                                                                               ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:padding="4dp">
-	
-	<ProgressBar
-		android:layout_width="32dp"
-		android:layout_height="32dp"
-		android:layout_gravity="center" />
-</FrameLayout>
+	android:layout_height="40dp"
+	android:layout_gravity="center"
+	android:padding="4dp" />
