--- a/recyclerview/src/main/res/layout/item_no_more.xml
+++ b/recyclerview/src/main/res/layout/item_no_more.xml
@@ -1,15 +1,16 @@
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   ~                                                                                               ~
   ~                         Created by Dwi Ariyanto (creatures99@gmail.com)                       ~
   ~                             Copyright © 2018. All rights reserved.                            ~
   ~                                                                                               ~
   ~                                                                                               ~
-  ~ Last modified:                                                                                ~
-  ~ Tuesday, January 30, 2018 at 00:14                                                            ~
+  ~ Create On:                                                                                    ~
+  ~ Monday, March 05, 2018 at 22:34                                                               ~
   ~                                                                                               ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
-<resources>
-    <string name="app_name">Recycler View</string>
-	<string name="no_more">No More Data</string>
-</resources>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:gravity="center_horizontal"
+	android:padding="4dp"
+	android:text="@string/no_more" />
