--- a/recyclerview-example/src/main/res/layout/multi_item2_activity.xml
+++ b/recyclerview-example/src/main/res/layout/multi_item2_activity.xml
@@ -5,24 +5,17 @@
   ~                                                                                               ~
   ~                                                                                               ~
   ~ Create On:                                                                                    ~
-  ~ Sunday, February 18, 2018 at 22:43                                                            ~
+  ~ Wednesday, March 28, 2018 at 22:14                                                            ~
   ~                                                                                               ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <Button
-        android:id="@+id/btnReload"
-        android:text="Reload Data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+</android.support.v7.widget.RecyclerView>
