--- a/recyclerview-example/src/main/res/layout/activity_main.xml
+++ b/recyclerview-example/src/main/res/layout/activity_main.xml
@@ -35,4 +35,11 @@
 		android:layout_height="wrap_content"
 		android:text="Empty"
 		/>
+
+	<Button
+		android:id="@+id/btnMultiItem2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Multi Item 2"
+		/>
 </LinearLayout>
