--- a/recyclerview-example/src/main/res/layout/multi_item2_content_item.xml
+++ b/recyclerview-example/src/main/res/layout/multi_item2_content_item.xml
@@ -5,24 +5,35 @@
   ~                                                                                               ~
   ~                                                                                               ~
   ~ Create On:                                                                                    ~
-  ~ Sunday, February 18, 2018 at 22:43                                                            ~
+  ~ Wednesday, March 28, 2018 at 22:16                                                            ~
   ~                                                                                               ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <TextView
+        android:id="@+id/content1"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="content 1"
+        />
 
-    <Button
-        android:id="@+id/btnReload"
-        android:text="Reload Data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/content2"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="content 2"
+        />
+
+    <TextView
+        android:id="@+id/content3"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="content 3"
+        />
 </LinearLayout>
