feat: New example

--- a/recyclerview-example/src/main/res/layout/activity_main.xml
+++ b/recyclerview-example/src/main/res/layout/activity_main.xml
@@ -30,6 +30,13 @@
 		/>
 
 	<Button
+		android:id="@+id/btnLoadMoreWithoutNoMore"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Load More Without No More"
+		/>
+
+	<Button
 		android:id="@+id/btnEmpty"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
