--- a/recyclerview-example/src/main/res/layout/activity_load_more.xml
+++ b/recyclerview-example/src/main/res/layout/activity_load_more.xml
@@ -15,4 +15,4 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="com.dwiariyanto.recyclerview.example.feature.loadmore.LoadMoreActivity"></android.support.constraint.ConstraintLayout>
+	tools:context="com.dwiariyanto.recyclerview.example.feature.loadmorewithoutnomore.LoadMoreWithoutNoMoreActivity"></android.support.constraint.ConstraintLayout>
